# chodzkos-detection

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/chodzkos_detection/: __init__.py  services.py  tools.py
tests/: test_package.py  test_services.py  test_tools.py
