[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chodzkos-detection"
version = "0.1.2"
description = "Uniwersalne sondy narzędzi CLI i usług HTTP (stdlib-only, bez Qt i bez torcha)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chodzkos" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/chodzkos/chodzkos-detection"

[tool.hatch.build.targets.wheel]
packages = ["src/chodzkos_detection"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# "S" (flake8-bandit) pilnuje m.in. S310 — niebezpiecznego urlopen z dowolnym schematem.
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# Testy z natury używają `assert` (S101) — to mechanizm pytest, nie luka bezpieczeństwa.
"tests/**" = ["S101"]
# tools.py celowo woła zewnętrzne binarki (subprocess) z PATH — sonda narzędzi CLI to
# istota pakietu; wejście to nazwy narzędzi z kodu, nie dane użytkownika.
"src/chodzkos_detection/tools.py" = ["S603", "S607"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
